deploy/environments/home-k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: castaway
  labels:
    app.kubernetes.io/part-of: castaway
