deploy/environments/home-k3s/bot-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: castaway-discord-bot
spec:
  replicas: 1
  strategy:
    type: Recreate
