deploy/environments/home-k3s/web-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: castaway-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: castaway-web
