deploy/environments/home-k3s/web-placement-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: castaway-web
spec:
  template:
    spec:
      nodeSelector:
        selfhost.bry-guy.net/capability-service: "true"
